--- a/Views/Equipment/List.cshtml
+++ b/Views/Equipment/List.cshtml
@@ -17,9 +17,12 @@
         <div class="form-group mb-0 ml-auto" style="width: auto;">
             <div class="row">
                 <div class="col-5" style="width: 200px;">
+                    @if (Authorities.CheckAuth(ActiveUser.activeUser.EmployeePositionId, "EQUİPMENTADD"))
+                                {
                     <button type="button" class="btn btn-outline-success btn-block btn-sm" data-toggle="modal" data-target="#modal-default">
                         <i class="fas fa-plus"></i>&ensp;Add Equipment
                     </button>
+                                }
                 </div>
                 <div class="col-7" style="width: 150px;">
                     <select id="equipmentCategoryFilter" class="form-control form-control-sm" onchange="filterEquipmentRecords()">
