--- a/Views/Inspection/Details.cshtml
+++ b/Views/Inspection/Details.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Seawise.Models.InspectionRecord
+@using Seawise.Data;
 
 @{
     ViewData["Title"] = "Inspection Record Details";
@@ -14,16 +15,19 @@
 <div class="card card-info card-outline">
     <div class="card-header">
         <h3 class="card-title"><i class="fas fa-search"></i>&nbsp; Inspection Record</h3>
+        @if (Authorities.CheckAuth(ActiveUser.activeUser.EmployeePositionId, "İNSPECTİONADD"))
+        {
+            <div class="card-tools">
+                <button type="button" class="btn btn-tool" id="editButton">
+                    <i class="fas fa-edit"></i>&nbsp; Edit
+                </button>
 
-        <div class="card-tools">
-            <button type="button" class="btn btn-tool" id="editButton">
-                <i class="fas fa-edit"></i>&nbsp; Edit
-            </button>
-            <button type="button" class="btn btn-tool" id="saveButton" hidden>
-                <i class="fas fa-save"></i>&nbsp; Save
-            </button>
-        </div>
-        
+                <button type="button" class="btn btn-tool" id="saveButton" hidden>
+                    <i class="fas fa-save"></i>&nbsp; Save
+                </button>
+            </div>
+        }
+
     </div>
 
     <div class="card-body">
@@ -68,9 +72,12 @@
 <div class="card card-warning card-outline mt-4">
     <div class="card-header d-flex align-items-center">
         <h3 class="card-title"><i class="fas fa-exclamation-triangle"></i>&nbsp; Inspection Findings</h3>
-        <button type="button" class="btn btn-outline-success btn-sm ml-auto" data-toggle="modal" data-target="#addFindingModal">
-            <i class="fas fa-plus"></i>&nbsp; Add Finding
-        </button>
+        @if (Authorities.isParticipant(ActiveUser.activeUser.EmployeeId,Model.InspectionRecordId,"İNSPECTİON") || Authorities.CheckAuth(ActiveUser.activeUser.EmployeeId,"İNSPECTİONADD"))
+        {
+            <button type="button" class="btn btn-outline-success btn-sm ml-auto" data-toggle="modal" data-target="#addFindingModal">
+                <i class="fas fa-plus"></i>&nbsp; Add Finding
+            </button>
+        }
     </div>
     <div class="card-body p-0">
         <table class="table table-hover table-striped">
@@ -102,12 +109,15 @@
                         <td>@finding.InspectionCriteria.Description</td>
                         <td>@finding.Description</td>
                         <td>
-                            <button class="btn btn-danger btn-sm delete-finding-button"
-                                    data-finding-id="@finding.InspectionFindingId"
-                                    data-toggle="modal"
-                                    data-target="#deleteFindingModal">
-                                <i class="fas fa-trash"></i>
-                            </button>
+                            @if (Authorities.CheckAuth(ActiveUser.activeUser.EmployeePositionId, "FİNDİNGDELETE"))
+                            {
+                                <button class="btn btn-danger btn-sm delete-finding-button"
+                                data-finding-id="@finding.InspectionFindingId"
+                                data-toggle="modal"
+                                data-target="#deleteFindingModal">
+                                    <i class="fas fa-trash"></i>
+                                </button>
+                            }
 
                         </td>
                     </tr>
@@ -122,22 +132,24 @@
 
 <!-- Inspection Participants Section -->
 
-    <div class="card card-success card-outline mt-4">
+<div class="card card-success card-outline mt-4">
     <div class="card-header d-flex align-items-center">
-            <h3 class="card-title"><i class="fas fa-users"></i>&nbsp; Inspection Participants</h3>
+        <h3 class="card-title"><i class="fas fa-users"></i>&nbsp; Inspection Participants</h3>
 
         <div class="form-group mb-0 ml-auto" style="width: auto;">
             <div class="row">
-                <div style="width: 200px;">
-                    <button type="button" class="btn btn-outline-success btn-block btn-sm" data-toggle="modal" data-target="#modal-default">
-                        <i class="fas fa-plus"></i>&ensp;Add Participant
-                    </button>
-                </div>
-
+                @if (Authorities.CheckAuth(ActiveUser.activeUser.EmployeePositionId, "PARTİCİPANTADD"))
+                {
+                    <div style="width: 200px;">
+                        <button type="button" class="btn btn-outline-success btn-block btn-sm" data-toggle="modal" data-target="#modal-default">
+                            <i class="fas fa-plus"></i>&ensp;Add Participant
+                        </button>
+                    </div>
+                }
             </div>
         </div>
-        </div>
-        <div class="card-body p-0">
+    </div>
+    <div class="card-body p-0">
         @if (Model?.InspectionParticipants?.Any() ?? false)
         {
             <table class="table table-hover table-striped">
@@ -169,15 +181,21 @@
                             <td>@employee.EmployeePosition.EmployeeDepartment.DepartmentName</td>
                             <td>@employee.EmployeePosition.PositionName</td>
                             <td>
-                                <a href="@Url.Action("Details", "Employee", new { employeeId = employee.EmployeeId })" class="btn btn-sm btn-primary">
-                                    <i class="fas fa-user"></i>&nbsp; View Profile
-                                </a>
+                                @if (Authorities.CheckAuth(ActiveUser.activeUser.EmployeePositionId, "EMPLOYEE"))
+                                {
+                                    <a href="@Url.Action("Details", "Employee", new { employeeId = employee.EmployeeId })" class="btn btn-sm btn-primary">
+                                        <i class="fas fa-user"></i>&nbsp; View Profile
+                                    </a>
+                                }
+                                @if (Authorities.CheckAuth(ActiveUser.activeUser.EmployeePositionId, "PARTİCİPANTADD"))
+                                {
                                 <button class="btn btn-danger btn-sm delete-finding-button"
                                         data-employee-id="@employee.EmployeeId"
                                         data-toggle="modal"
                                         data-target="#deleteParticipantModal">
                                     <i class="fas fa-trash"></i>
                                 </button>
+                                }
                             </td>
                         </tr>
                     }
