--- a/Views/Search/EmployeeSearchResult.cshtml
+++ b/Views/Search/EmployeeSearchResult.cshtml
@@ -7,44 +7,48 @@
 @if (Model.Count() > 0)
 { 
 
-<div class="card">
-    <div class="card-header">
-        <h3 class="card-title">Maintenance List</h3>
+    <div class="card">
+        <div class="card-header">
+            <h3 class="card-title">Maintenance List</h3>
 
-       
-    </div>
-    <div class="card-body p-0">
-        <table class="table table-striped projects">
-            <thead>
-                <tr>
-                    <th style="width: 13%">
-                        Inernal Number
-                    </th>
-                    <th>
-                        Avatar
-                    </th>
-                    <th style="width: 15%">
-                        Name Surname
-                    </th>
-                    <th style="width: 15%">
-                        Department
-                    </th>
-                    <th>
-                        Position
-                    </th>
-                    <th>
-                        Hire Date
-                    </th>
-                    <th style="width: 8%" class="text-center">
-                        Status
-                    </th>
-                    <th style="width: 12%">
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach(var employee in Model)
-                {
+
+        </div>
+        <div class="card-body p-0">
+            <table class="table table-striped projects">
+                <thead>
+                    <tr>
+                        <th style="width: 13%">
+                            Inernal Number
+                        </th>
+                        <th>
+                            Avatar
+                        </th>
+                        <th style="width: 15%">
+                            Name Surname
+                        </th>
+                        <th style="width: 15%">
+                            Department
+                        </th>
+                        <th>
+                            Position
+                        </th>
+                        <th>
+                            Hire Date
+                        </th>
+                        <th style="width: 8%" class="text-center">
+                            Status
+                        </th>
+                        <th style="width: 12%">
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach(var employee in Model)
+                    {
+                        @using Seawise.Data
+                        @if (ActiveUser.activeUser.EmployeePosition.PositionName != "ADMIN" && employee.EmployeePosition.PositionName == "ADMIN")
+                            continue;
+
                     <tr>
                         <td>
                            @employee.InternalEmployeeCode
